<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <!-- App and activity core -->
    <string name="app_name">Speed Test Visualizer</string>
    <string name="speedtest_app_name">Speed Test</string>
    <string name="title_activity_mapper">Map Visualizer</string>
    <string name="title_activity_about_app">About App</string>
    <string name="title_activity_datastats">Stats</string>
    <string name="title_datastats_section1">Section 1</string>
    <string name="title_datastats_section2">Section 2</string>
    <string name="title_datastats_section3">Section 3</string>
    
    <string name="txt_welcome">Welcome!</string>
    <string name="txt_inpul_guide">Paste exported CSV data content</string>
    <string name="txt_inpul_hint">Long press to show \npaste option&#8230;</string>
    
    <!-- 
        String used on About Activity
     -->
    <string name="txt_about_info">        
        Speed Test Visualizer provides a way to visualize the speed test results from Speedtest.net. The Results
        are all displayed in a Map where each point shows the location of speed test, the connection type and connection speed. 
        \n\n
        To use the App, you must have SpeedTest.net installed.
        \n\n
        Developed by Liquid Labs Inc.        
    </string>

    
    <string name="lbl_input_heading">Manual input</string>
    <string name="lbl_input_process">Process Data</string>
    <string name="lbl_launch_map">View map</string>
    <string name="lbl_launch_stats">Statistics</string>
    <string name="lbl_show_how">Show me how</string>
    <!-- User message -->
    <string name="msg_invalid_data">Ops! we were unable to process exported data.\nIf issue persists, please report us.\nWe\'ll look into it :-]</string>
    <string name="msg_valid_data_session_available">You can revisit maps with recently used data.\n<i>Note: Once you exit app, data will be lost.</i></string>
    <string name="msg_welcome_instructions">Welcome! \nYou can visualize Speedtest.net\'s saved data by exporting them into this app, or use the \"Paste\" menu to import data from your clipboard.</string>
    <string name="msg_map_not_ready">Preparing map with data&#8230;</string>
    <string name="msg_no_records_found">There is no record found to show on map.\nIf you think this is a bug, please report us.</string>

    <!-- SpeedTest app related -->
    <string name="lbl_get_app_googleplay">Get SpeedTest App on Play</string>
    <string name="lbl_launch_speedtest_app">Export CSV from SpeedTest</string>
    <string name="filter_wifi">wifi</string>
    <string name="filter_cell">cell</string>
    <string name="filter_all">all</string>
    
    <string-array name="filters_array">
        <item>@string/filter_all</item>
        <item>@string/filter_wifi</item>
        <item>@string/filter_cell</item>
    </string-array>
    
    <!-- Menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_share_app">Share</string>
    <string name="action_paste">Paste CSV</string>
    <string name="action_about">About</string>
    <string name="action_report_issue">Report</string>
    <string name="action_google_maps_attribution">About Maps</string>
    <string name="action_github_project">Get it on Github</string>
    <string name="action_github_project_short">Github</string>


    <!-- UI element description for accessibility -->
    <string name="desc_user_feedback_icon">User Input Feedback</string>
    <string name="desc_download_info">Download Speed</string>
    <string name="desc_upload_info">Upload Information</string>
    <string name="desc_connection_type">Network Connection Type</string>
    <string name="desc_record_date">Date</string>

    <!-- Localized header value for exported csv -->
    <string name="speedtest_csv_header">Date,ConnType,Lat,Lon,Download,Upload,Latency,ServerName,InternalIp,ExternalIp</string>
    <!--
        This value is required to validate data independent of localization. Because, when
        data is exported,  we end up with mojibake (wrong trasformation of localized data)
        More info @ http://en.wikipedia.org/wiki/Mojibake
        
        So, only take part of header data which are supported by Locale.US 
    -->
    <string name="speedtest_csv_header_validation">ServerName,InternalIp,ExternalIp</string>
    
    <!-- email content -->
    <string name="title_dialog_choose_email">Select an email app:</string>
    <string name="report_issue_subject">Issue for %s app</string>
    <string name="report_issue_body">Hi,\nData import is non-functional.\n\nHere is useful information for debugging:\n-%s-\n</string>
    <string name="share_app_subject">Checkout %s app data visualizer.</string>
    <string name="share_app_body" formatted="false">%s app visualizes exported data in maps, and other ways.\n\nGet the app for FREE! from Google play store at %s.</string>
    
    <!-- 
        String used on About Activity
     -->
    <string name="txt_about_info">Speed Test Visualizer provides a visualization of the speed test results from Speedtest.net
        and displays them in Map. In the Map each point shows the location of speed test, the connection speed and type (wifi, 3G).  
        \n\nSource code of the App is available at 
        <a href="https://github.com/liquidlabs/android-speedtest-mapper">Github</a>
                               
    </string>
    
     <string name="txt_author_info">\nDeveloped by Liquid Labs Inc. Visit us at <a href="http://liquidlabs.ca/">http://liquidlabs.ca/</a>
     </string>
    
    <string name="lbl_license_info">Google Maps Terms</string>    
    <string name="lbl_apps_list">Apps By Liquid Labs</string>
    <string name="google_play_query">market://search?q=pub:Liquid Labs Inc.</string>
    <string name="github_url">https://github.com/liquidlabs/android-speedtest-mapper</string>
    <string name="author_url">http://liquidlabs.ca/</string>
            
    
    
</resources>