<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MarginedActivity" 
    tools:context=".AboutAppActivity" 
>

    <TextView
        style="@style/AboutView.Info"
        android:text="@string/txt_about_info"
        
        android:id="@+id/txt_about_info"                
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"    
     />
    
    <Button
        style="@style/AboutView.Button"
        android:id="@+id/btn_license_info"
        android:text="@string/lbl_license_info"
        
        android:layout_alignParentBottom="true"           
     />    
     

    <Button
        style="@style/AboutView.Button"
        android:id="@+id/txt_about_attr_info"
        
        android:text="@string/lbl_apps_list"
        android:layout_above="@id/btn_license_info"            
     />    
    
    

</RelativeLayout>