<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MarginedActivity"
    tools:context=".MainActivity" >

    <!--
        I'm trying to keep it simple here. Instead of using dialog and other UI things, 
        trying to re-use existing UI elements to convey message    -->
    <ImageView
        android:id="@+id/ic_user_feedback"
        style="@style/InfoView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/activity_message_block_top_margin"
        android:contentDescription="@string/desc_user_feedback_icon"
        android:src="@drawable/ic_dialog_bubble" />

    <TextView
        android:id="@+id/txt_user_feedback_guide"
        style="@style/InfoView.Text"
        android:layout_below="@+id/ic_user_feedback"
        android:text="@string/txt_welcome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Invisible button that shows, when user has some data in session to re-launch map -->
    <Button
        android:id="@+id/btn_relaunch_map"
        style="@style/InfoView.Button"
        android:layout_below="@+id/txt_user_feedback_guide"
        android:text="@string/lbl_launch_map" />

    <!--
        Button which will be Re-Used to show either:
         * Link to existing SpeedTest App - when app is already installed 
         * otherwise, link to Speed Test app on google play store    -->
    <Button
        android:id="@+id/btn_speedtest_app_link"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/lbl_get_app_googleplay" />

</RelativeLayout>