<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/tableRow1"
        style="@style/WrapBoth" >

        <ImageView
            android:id="@+id/img_legend_download"
            style="@style/MarkerInfoIcon"
            android:contentDescription="@string/desc_download_info"
            android:src="@drawable/ic_download" />

        <TextView
            android:id="@+id/txt_info_download"
            style="@style/MarkerInfoText"
            android:text="@string/desc_download_info" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        style="@style/WrapBoth" >

        <ImageView
            android:id="@+id/img_legend_upload"
            style="@style/MarkerInfoIcon"
            android:contentDescription="@string/desc_upload_info"
            android:src="@drawable/ic_upload" />

        <TextView
            android:id="@+id/txt_info_upload"
            style="@style/MarkerInfoText"
            android:text="@string/desc_upload_info" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        style="@style/WrapBoth" >

        <ImageView
            android:id="@+id/img_legend_conntype"
            style="@style/MarkerInfoIcon"
            android:contentDescription="@string/desc_connection_type"
            android:src="@drawable/ic_connection_cell" />

        <TextView
            android:id="@+id/txt_info_conntype"
            style="@style/MarkerInfoText"
            android:text="@string/desc_connection_type" />

    </TableRow>

    <TextView
        android:id="@+id/txt_info_heading"
        style="@style/WrapBoth"
        android:gravity="center"
        android:text="@string/desc_record_date" />

    
</TableLayout>