<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/input_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingLeft="@dimen/dialog_horizontal_margin"
    android:paddingRight="@dimen/dialog_horizontal_margin"
    android:paddingTop="@dimen/dialog_vertical_margin"
    android:paddingBottom="@dimen/dialog_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lbl_input_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_inpul_guide" />

    <EditText
        android:id="@+id/txt_input_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_inpul_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="@dimen/input_height"
        android:minLines="@integer/num_input_lines"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btn_process_input_data"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_input_process" />

</LinearLayout>